# ukmda-dataprocessing

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  SECURITY.md  UK0006.ini  UK000F.ini  UK9999.ini  appspec.yml  archive.ini  build_meteortools.ps1  bumpver.toml  clanfield_se.ini  deploy-archive.ps1  deploy_local.ps1  live.ini  orbitsolver.ini  pyproject.toml  pytest.ini  radio.ini  stacking.ini  tackley_ne.ini  tackley_tc.ini  using_vault.sh
ukmon_pylib/: README.md  __init__.py  additions.txt  pyproject.toml  requirements.txt
ukmon_pylib/analysis/: README.md  apiExampleCode.py  compareBrightnessData.py  filterData.py  gatherDetectionData.py  recreateExtraCsv.py  showerAnalysis.py  stationAnalysis.py  summaryAnalysis.py
ukmon_pylib/converters/: README.md  RMStoUFOA.py  RMStoUKMON.py  UFOAtoFTPdetect.py  UKMONtoUFOR91.py  __init__.py  fetchECSV.py  fetchECSVfromArchive.py  ftpToECSV.py  mergeMatchFiles.py  toKML.py  toParquet.py
ukmon_pylib/converters/tests/: tester.ps1
ukmon_pylib/fileformats/: CameraDetails.py  README.md  ReadUFOAnalyzerXML.py  ReadUFOCapXML.py  UAFormats.py  UOFormat.py  extractRawDataOneEvent.py  ftpDetectInfo.py  imoWorkingShowerList.py  platepar.py  searchIndex.py
ukmon_pylib/gmnanalysis/: gmnAnnualReport.py
ukmon_pylib/maintenance/: README.md  dataMaintenance.py  rerunFailedLambdas.py  resubmitFTPs.py  sortToDateDirs.py
ukmon_pylib/metrics/: README.md  camMetrics.py  costMetrics.py  getMatchStats.py  getMetrics.py  timingMetrics.py  volumeMetrics.py
ukmon_pylib/metrics/tests/: test_metrics.py
ukmon_pylib/reports/: README.md  cameraStatusReport.py  createAnnualBarChart.py  createExchangeFiles.py  createLatestTable.py  createSearchableFormat.py  createSummaryTable.py  extractShowerCsv.py  extractors.py  filterBylocDirBri.py  findBestMp4s.py  findFailedMatches.py  findFireballs.py  getLivestreamData.py  getSolutionStati.py  makeCoverageMap.py  makeReportTables.py  reportActiveShowers.py  reportBadCameras.py  reportOfLatestMatches.py
ukmon_pylib/rmsutils/: README.md  multiDayRadiant.py  multiEventGroundMap.py
ukmon_pylib/share/maps/: images.json
ukmon_pylib/tests/: makeMaxCamData.py  test_UserTools.py  test_apicalls.py  test_filterftp.py  test_trajsolver.py  totest.txt
ukmon_pylib/tests/MaxCams/UK0002/UK0002_20230218_175328_664433/: .config
ukmon_pylib/tests/MaxCams/UK0006/UK0006_20230112_165726_261879/: FTPdetectinfo_UK0006_20230112_165726_261879.txt
ukmon_pylib/tests/MaxCams/UK000S/UK000S_20230112_170313_065717/: .config  FTPdetectinfo_UK000S_20230112_170313_065717.txt  platepars_all_recalibrated.json
ukmon_pylib/tests/MaxCams/UK000S/UK000S_20230218_180147_762803/: FTPdetectinfo_UK000S_20230218_180147_762803.txt
ukmon_pylib/tests/MaxCams/UK000S/UK000S_20230219_180147_762803/: FTPdetectinfo_UK000S_20230218_180147_762803.txt
ukmon_pylib/tests/MaxCams/UK0027/UK0027_20230218_180338_935848/: FTPdetectinfo_UK0027_20230218_180338_935848.txt
ukmon_pylib/tests/MaxCams/UK0031/UK0031_20230218_180452_985589/: platepars_all_recalibrated.json
ukmon_pylib/tests/MaxCams/UK0035/UK0035_20230112_164424_349079/: .config  FTPdetectinfo_UK0035_20230112_164424_349079.txt  platepars_all_recalibrated.json
ukmon_pylib/tests/MaxCams/UK003C/UK003C_20230112_171730_953588/: .config  FTPdetectinfo_UK003C_20230112_171730_953588.txt  (+1 more)
ukmon_pylib/tests/MaxCams/baseline/: processed_trajectories.json.limit6  trajectory_summary.txt
ukmon_pylib/tests/MaxCams/nolimit/: processed_trajectories.json  trajectory_summary.txt
ukmon_pylib/tests/kmls/: UK0003-70km.kml  UK0004-70km.kml  UK000B-70km.kml  UK000C-70km.kml  UK000F-70km.kml  UK000T-70km.kml  UK000Y-70km.kml  UK000Z-70km.kml  UK001E-70km.kml  UK001K-70km.kml  UK001L-70km.kml  UK001M-70km.kml  UK001Z-70km.kml  UK0020-70km.kml  UK0021-70km.kml  UK0022-70km.kml  UK0025-70km.kml  UK0026-70km.kml  UK0027-70km.kml  UK002B-70km.kml  UK002F-70km.kml  UK002K-70km.kml  UK002L-70km.kml  UK002W-70km.kml  UK002X-70km.kml  UK0030-70km.kml  UK0032-70km.kml  UK0037-70km.kml  UK0038-70km.kml  UK0039-70km.kml  UK003B-70km.kml  UK003D-70km.kml  UK003E-70km.kml  UK003F-70km.kml  UK003G-70km.kml  UK003J-70km.kml  UK003R-70km.kml  UK003T-70km.kml  UK003U-70km.kml  UK003W-70km.kml  (+55 more)
ukmon_pylib/tests/testFilter/: FTPdetectinfo_UK006S_20230112_170327_316507.txt.new  FTPdetectinfo_UK006S_20230112_170327_316507_new.txt  platepars_all_recalibrated.json
ukmon_pylib/traj/: README.md  ShowerAssociation.py  clusdetails.txt  consolidateDistTraj.py  consolidateResults.py  createDistribMatchingSh.py  createExecMatchingSh.py  distributeCandidates.py  eventChecker.py  extraDataFiles.py  extractTrajDetails.py  gatherMissedPlatepars.py  manageTraj.py  manualBulkReruns.py  pickleAnalyser.py  plotOSMGroundTrack.py  plotStationsOnMap.py  reportOfLatestMatches.py  taskrunner.json  ufoShowerAssoc.py  ufoTrajSolver.py  updateFtpAndPlate.py
ukmon_pylib/ufoutils/: CurateUFO.py  README.md  UAFormats.py  UOFormat.py  analyseUFOwithRMS.py  curateCamera.py  curateEngine.py  curateFolder.py  ufoTrajSolver.py
ukmon_pylib/usertools/: README.md  compareMLtoManual.py  drawFTPfile.py  findNearDuplicates.py  getLiveImages.py  getOverlappingFovs.py  multiDayRadiant.py  multiEventGroundMap.py  multiTrackStack.py  plotCAMSOrbits.py  plotRMSOrbits.py  plotShowerInfo.py  plotTrack.py  retrieveECSV.py  toKML.py
ukmon_pylib/usertools/tests/: 20230218_051312-original.kml
ukmon_pylib/utils/: Math.py  README.md  VectorMaths.py  annotateImage.py  awsAthenaGlueRetr.py  camTable.py  compareMLtoManual.py  convertSolLon.py  drawFTPfile.py  getActiveShowers.py  getMatchStats.py  getNextBatchStart.py  getOverlappingFovs.py  getShowerDates.py  hcVaultActions.py  kmlHandlers.py  makeCoverageMap.py  multiTrackStack.py  plotCAMSOrbits.py  plotRMSOrbits.py  plotStationsOnMap.py  plotTrack.py  rerunFailedGetExtraFiles.py  rerunFailedLambdas.py  resubmitFTPs.py  retrieveECSV.py  sendAnEmail.py
ukmon_pylib/wmplloc/: Config.py  Math.py  Physics.py  Pickling.py  ShowerAssociation.py  awsAthenaGlueRetr.py  createOrbitPageIndex.py  pickleAnalyser.py
(+1644 files in other folders)
