# Copyright (C) 2018-2023 Mark McIntyre

# pyproject.toml for building the PYPI library of python code

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukmon_meteortools"
version = "2023.04.1"
description = "Python Tools for Meteor Data Analysis"
readme = "meteortools/README.md"
authors = [{ name = "Mark McIntyre", email = "ukmon@markmcintyreastro.co.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Gnu Public License V3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["meteors", "ukmon"]
dependencies = [
    "boto3",
    "fastparquet",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "googleapis-common-protos",
    "matplotlib==3.3.2",
    "numpy",
    "oauthlib",
    "pandas",
    "Pillow",
    "pytz",
    "Shapely",
    "simplekml",
    "s3fs",
    "xmltodict",
    "requests",
    "pytest",
    "pyproj",
    "Cython"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["bumpver", "gitpython", "behave", "pip-tools", "pytest"]

[project.urls]
"Homepage" = "https://github.com/markmac99/UKMon-shared/ukmon_pylib/"
"Bug Tracker" = "https://github.com/markmac99/UKMon-shared/issues"

#[project.scripts]
#realpython = "reader.__main__:main"

[tool.setuptools]
#package-dir = {"" = "ukmon_pylib"}
packages = ["meteortools.utils", "meteortools.usertools", "meteortools.fileformats", "meteortools.rmsutils"]

[tool.bumpver]
current_version = "2023.04.1"
version_pattern = "YYYY.0M.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"',]
"ukmon_pylib/__init__.py" = ["{version}",]
"ukmon_pylib/README.md" = ["{version}",]

