# Copyright (C) 2018-2023 Mark McIntyre

# pyproject.toml for building the PYPI library of python code

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukmon_meteortools"
version = "2023.05.4"
description = "Python Tools for Meteor Data Analysis"
readme = "ukmon_meteortools/README.md"
authors = [{ name = "Mark McIntyre", email = "ukmon@markmcintyreastro.co.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy"
]
keywords = ["meteors", "ukmon"]
dependencies = [
    "fastparquet",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "googleapis-common-protos",
    "matplotlib==3.3.2",
    "numpy",
    "oauthlib",
    "pandas",
    "Pillow",
    "pytz",
    "Shapely",
    "simplekml",
    "s3fs",
    "xmltodict",
    "requests",
    "pyproj",
    "pdoc",
    "Cython"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["bumpver", "gitpython", "behave", "pytest", "pip-tools"]

[project.urls]
"Homepage" = "https://github.com/markmac99/UKMon-shared/ukmon_meteortools/"
"Bug Tracker" = "https://github.com/markmac99/UKMon-shared/issues"

#[project.scripts]
#realpython = "reader.__main__:main"

[tool.setuptools]
#package-dir = {"" = "ukmon_pylib"}
packages = ["ukmon_meteortools.utils", "ukmon_meteortools.usertools", 
        "ukmon_meteortools.fileformats", "ukmon_meteortools.rmsutils", 
        "ukmon_meteortools.share"]

#[tool.setuptools.packages.find]
#where = ["ukmon_meteortools"]

[tool.setuptools.package-data]
"*" = ["*.npy", "*.xml"]

[tool.bumpver]
current_version = "2023.05.4"
version_pattern = "YYYY.0M.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"',]
"ukmon_meteortools/__init__.py" = ["{version}",]
#"ukmon_meteortools/README.md" = ["{version}",]

