# Copyright (C) 2018-2023 Mark McIntyre

# pyproject.toml for building the PYPI library of python code

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ukmon_meteortools"
version = "2023.07.10"
description = "Python Tools for Meteor Data Analysis"
readme = "ukmon_meteortools/README.md"
authors = [{ name = "Mark McIntyre", email = "ukmon@markmcintyreastro.co.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy"
]
keywords = ["meteors", "ukmon"]
dependencies = [
    "fastparquet",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "googleapis-common-protos",
    'matplotlib==3.3.2 ; python_version <= "3.8"',
    'matplotlib; python_version > "3.8"',
    "numpy",
    "oauthlib",
    "pandas",
    "Pillow",
    "pytz",
    "Shapely",
    "simplekml",
    "s3fs",
    "xmltodict",
    "requests",
    "pyproj==1.9.6 ; python_version < '3.8' and platform_machine == 'armv7l'",
    "pyproj==2.6.1.post1 ; python_version < '3.8' and platform_machine != 'armv7l'",
    "pyproj==3.5.0 ; python_version >= '3.8'",
    "pdoc",
    "Cython",
    "opencv-python; platform_machine != 'armv7l'",
    "imageio",
    "scipy",
    "jplephem",
    "pyephem",
    "gitpython",
    "astropy",
    "pyqt5; platform_machine != 'aarch64' and platform_machine != 'armv7l'",
    "basemap",
    "basemap-data-hires"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["bumpver", "gitpython", "behave", "pytest", "pip-tools"]

[project.urls]
"Homepage" = "https://markmac99.github.io/UKmon-shared/ukmon_meteortools.html"
"Bug Tracker" = "https://github.com/markmac99/UKMon-shared/issues"

#[project.scripts]
#realpython = "reader.__main__:main"

[tool.setuptools]
#package-dir = {"" = "ukmon_pylib"}
packages = ["ukmon_meteortools.utils", "ukmon_meteortools.ukmondb", 
        "ukmon_meteortools.fileformats", "ukmon_meteortools.rmsutils", 
        "ukmon_meteortools.share"]

#[tool.setuptools.packages.find]
#where = ["ukmon_meteortools"]

[tool.setuptools.package-data]
"*" = ["*.npy", "*.xml"]

[tool.bumpver]
current_version = "2023.07.10"
version_pattern = "YYYY.0M.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"',]
"ukmon_meteortools/__init__.py" = ['__version__ = "{version}"',]
#"ukmon_meteortools/README.md" = ["{version}",]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    'ignore:pyproj unable to set database path',
]
